feat: implement share chart and clone chart features