@@ -6,13 +6,12 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
-
 import org.springframework.data.domain.Page;
 import org.springframework.stereotype.Service;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.haiphamcoder.reporting.domain.dto.ChartDto;
+import com.haiphamcoder.reporting.domain.dto.UserDto;
 import com.haiphamcoder.reporting.domain.entity.Chart;
 import com.haiphamcoder.reporting.domain.entity.ChartPermission;
 import com.haiphamcoder.reporting.domain.entity.Source;
@@ -29,6 +28,7 @@ import com.haiphamcoder.reporting.repository.ChartPermissionRepository;
 import com.haiphamcoder.reporting.repository.ChartRepository;
 import com.haiphamcoder.reporting.repository.SourceRepository;
 import com.haiphamcoder.reporting.service.ChartService;
+import com.haiphamcoder.reporting.service.UserGrpcClient;
 import com.haiphamcoder.reporting.shared.MapperUtils;
 import com.haiphamcoder.reporting.shared.Pair;
 import com.haiphamcoder.reporting.shared.QueryOptionToSqlConverter;
@@ -45,12 +45,23 @@ public class ChartServiceImpl implements ChartService {
     private final ChartRepository chartRepository;
     private final ChartPermissionRepository chartPermissionRepository;
     private final SourceRepository sourceRepository;
+    private final UserGrpcClient userGrpcClient;
 
     @Override
     public Pair<List<ChartDto>, Metadata> getAllChartsByUserId(Long userId, String search, Integer page,
             Integer limit) {
         Page<Chart> charts = chartRepository.getAllChartsByUserId(userId, search, page, limit);
-        return new Pair<>(charts.stream().map(ChartMapper::toChartDto).collect(Collectors.toList()),
+        return new Pair<>(charts.stream().map(chart -> {
+            ChartDto chartDto = ChartMapper.toChartDto(chart);
+            UserDto userDto = userGrpcClient.getUserById(chart.getUserId());
+            chartDto.setOwner(ChartDto.Owner.builder()
+                    .id(String.valueOf(userDto.getId()))
+                    .name(userDto.getFirstName() + " " + userDto.getLastName())
+                    .email(userDto.getEmail())
+                    .avatar(userDto.getAvatarUrl())
+                    .build());
+            return chartDto;
+        }).toList(),
                 Metadata.builder()
                         .totalElements(charts.getTotalElements())
                         .numberOfElements(charts.getNumberOfElements())
